crates/dollet-core/src/output/snapshots/dollet_core__output__dummy_epg__tests__three_days_of_two_hour_blocks.snap
---
source: crates/dollet-core/src/output/dummy_epg.rs
expression: "summarize(&programs[..14])"
---
2026-09-11 15:00 -> 2026-09-11 17:00 | Channel A | Afternoon on Channel A. No listing was published for this slot.
2026-09-11 17:00 -> 2026-09-11 19:00 | Channel A | Evening placeholder on Channel A.
2026-09-11 19:00 -> 2026-09-11 21:00 | Channel A | Channel A is on air without a listing.
2026-09-11 21:00 -> 2026-09-11 23:00 | Channel A | Prime time on Channel A, schedule unknown.
2026-09-11 23:00 -> 2026-09-12 01:00 | Channel A | Night-time placeholder on Channel A.
2026-09-12 01:00 -> 2026-09-12 03:00 | Channel A | Channel A keeps the lights on while the schedule sleeps.
2026-09-12 03:00 -> 2026-09-12 05:00 | Channel A | Overnight on Channel A. Nothing scheduled, everything still on.
2026-09-12 05:00 -> 2026-09-12 07:00 | Channel A | Morning placeholder on Channel A.
2026-09-12 07:00 -> 2026-09-12 09:00 | Channel A | Channel A, before anyone published a schedule.
2026-09-12 09:00 -> 2026-09-12 11:00 | Channel A | Late morning on Channel A, guide data pending.
2026-09-12 11:00 -> 2026-09-12 13:00 | Channel A | Daytime placeholder on Channel A.
2026-09-12 13:00 -> 2026-09-12 15:00 | Channel A | Channel A continues, unannounced.
2026-09-12 15:00 -> 2026-09-12 17:00 | Channel A | Channel A continues, unannounced.
2026-09-12 17:00 -> 2026-09-12 19:00 | Channel A | Early evening on Channel A, no guide data available.
